// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "google/api/annotations.proto";

package com.example;

message SetValueCommand {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
    int32 value = 2;
}

message GetValueCommand {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
}

message MyResult {
    int32 value = 1;
}

service MyServiceEntity {
    option (akkaserverless.service) = {
        type: SERVICE_TYPE_ENTITY
        component: ".domain.MyEntity"
    };
    rpc SetValue(SetValueCommand) returns (google.protobuf.Empty);
    rpc GetValue(GetValueCommand) returns (MyResult);
}
